--- a/slides/xaringan-themer.css
+++ b/slides/xaringan-themer.css
@@ -297,3 +297,9 @@ table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
   background-color: var(--black);
 }
 
+
+
+/* Extra CSS */
+.remark-slide tr:nth-child(even) {
+  background: #FFFFFF;
+}
